-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: tools
-
b137
-
Verified
This issue is reproducible with self-contained applications
http://docs.oracle.com/javafx/2/deployment/self-contained-packaging.htm
Self-contained applications include custom native launcher and a copy of Java runtime. The internal structure of a self-contained application folder on Windows is as follow
./appRootFolder
./appRootFolder/App <=== native launcher
./appRootFolder/runtime <=== Java runtime
Native launcher launches Java using JLI_Launch(). Internally, it tries to find path to JRE that JLI will be using, it’s implemented in GetJREPath() function. GetJREPath() calls to GetApplicationHome() that assumes that native launcher is co-located with Java runtime but, for self-contained apps, Java runtime is placed to a different location and GetJREPath() fails to find valid path.
http://docs.oracle.com/javafx/2/deployment/self-contained-packaging.htm
Self-contained applications include custom native launcher and a copy of Java runtime. The internal structure of a self-contained application folder on Windows is as follow
./appRootFolder
./appRootFolder/App <=== native launcher
./appRootFolder/runtime <=== Java runtime
Native launcher launches Java using JLI_Launch(). Internally, it tries to find path to JRE that JLI will be using, it’s implemented in GetJREPath() function. GetJREPath() calls to GetApplicationHome() that assumes that native launcher is co-located with Java runtime but, for self-contained apps, Java runtime is placed to a different location and GetJREPath() fails to find valid path.
- blocks
-
JDK-8147392 [launcher] Change Linux to use JLI rather than JNI
-
- Closed
-
- relates to
-
JDK-8166189 Fix for Bug 8165524 breaks AIX build
-
- Closed
-
-
JDK-8145409 Better detect JRE that JLI will be using
-
- Closed
-