8165524: Better detect JRE that Linux JLI will be using

Reviewed-by: ksrini