jdk/src/java.base/windows/native/libjli/java_md.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -53,8 +53,5 @@ extern jlong Counter2Micros(jlong counts);
  */
 
 int UnsetEnv(char *name);
-
-jboolean
-GetApplicationHomeFromDll(char *buf, jint bufsize);
 
 #endif /* JAVA_MD_H */
